--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.dhl</groupId>
-  <artifactId>postgretohive</artifactId>
+  <artifactId>bitcoscala_2024</artifactId>
   <version>1.0</version>
 
   <properties>
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.11</artifactId>
-      <version>${spark.version}</version>
+      <version>2.4.7</version>
     </dependency>
 
     <!-- PostgreSQL JDBC Driver -->
@@ -70,7 +70,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>postgretohive</mainClass>
+              <mainClass>bitcoscala_2024</mainClass>
             </manifest>
           </archive>
         </configuration>
