--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/maven-v4_0_0.xsd">
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.dhl</groupId>
-  <artifactId>bitcoscala_2024</artifactId>
+  <groupId>com.project2024</groupId>
+  <artifactId>incrementalLoad</artifactId>
   <version>1.0</version>
 
   <properties>
@@ -19,14 +18,21 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
-      <version>2.4.7</version>
+      <version>${spark.version}</version>
     </dependency>
 
     <!-- Spark SQL -->
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.11</artifactId>
-      <version>2.4.7</version>
+      <version>${spark.version}</version>
+    </dependency>
+
+    <!-- Spark Hive -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-hive_2.11</artifactId>
+      <version>${spark.version}</version>
     </dependency>
 
     <!-- PostgreSQL JDBC Driver -->
@@ -35,22 +41,15 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.16</version>
     </dependency>
-
-    <!-- Spark Hive -->
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-hive_2.11</artifactId>
-      <version>2.4.7</version>
-    </dependency>
   </dependencies>
 
   <build>
     <plugins>
-      <!-- Maven Scala Plugin -->
+      <!-- Scala Maven Plugin -->
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.15.2</version>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>4.5.6</version>
         <executions>
           <execution>
             <goals>
@@ -61,19 +60,26 @@
         </executions>
       </plugin>
 
-      <!-- Maven JAR Plugin -->
+      <!-- Maven Shade Plugin for JAR packaging -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <mainClass>bitcoscala_2024</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>incrementalLoad</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
